--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,8 @@ click-repl==0.2.0
 colorama==0.4.4
 coverage==5.5
 Deprecated==1.2.13
+dnspython==2.2.1
+eventlet==0.33.2
 Faker==14.0.0
 Flask==2.2.2
 Flask-Cors==3.0.10
@@ -36,6 +38,7 @@ pathspec==0.10.1
 platformdirs==2.5.2
 prompt-toolkit==3.0.31
 psycopg2-binary==2.9.4
+pydub==0.25.1
 PyJWT==2.1.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
